--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title><%=htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <h1>hello</h1>
+    <h1 id="app">hello</h1>
 
 </body>
 </html>
